--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
         buildConfigField "String", "API_KEY", "\"8ff0ac2bf3e70ce59731e57f3ca503b2\""
+        buildConfigField "String", "API_URL", "\"https://api.themoviedb.org/3/\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -49,49 +50,32 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
     testImplementation 'junit:junit:4.12'
+
+    implementation 'com.android.support:design:29.0.3'
+    implementation 'com.google.android.material:material:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
 
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion" // use kapt for Kotlin
 
-
     // Koin
     implementation 'org.koin:koin-android:0.9.3'
 
-
     // Dependencies for Paging
     implementation "androidx.paging:paging-runtime:$pagingVersion"
-
-    implementation ("com.github.bumptech.glide:glide:4.9.0") {
-        exclude group: "com.android.support"
-    }
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation("com.github.bumptech.glide:glide:4.11.0@aar") {
         transitive = true
     }
-
-    // Dependencies for local unit tests
-    testImplementation "junit:junit:$junitVersion"
-    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    testImplementation "androidx.arch.core:core-testing:$archLifecycleVersion"
-    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
-
-    // Dependencies for Android unit tests
-    androidTestImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "org.mockito:mockito-core:$mockitoVersion"
-
-    // Tests
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
