--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-        buildConfigField "String", "API_KEY", "\"8ff0ac2bf3e70ce59731e57f3ca503b2\""
+        buildConfigField "String", "API_KEY", YOUR_API
         buildConfigField "String", "API_URL", "\"https://api.themoviedb.org/3/\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
